# anykit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
anykit/: .gitignore  Cargo.toml  host.json
anykit-dotnet/: Cargo.toml
anykit-dotnet/src/: lib.rs
anykit-go/: Cargo.toml
anykit-go/src/: anykit_go.h  lib.rs
anykit-js/: Cargo.toml  README.md  package-lock.json  package.json
anykit-js/src/: lib.rs
anykit-py/: Cargo.toml  pyproject.toml
anykit-py/src/: lib.rs
anykit/AnyFunc/: function.json
anykit/src/: lib.rs  math.rs
src/: math.rs
