[package]
name = "anykit-js"
version = "0.1.0"
authors = ["Damien Stanton <damien.stanton@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anykit = { path = "../anykit" }
neon = { version = "0.9", default-features = false, features = ["napi-6"] }
