[package]
name = "anykit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "anyfunc"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
hyper = "0.14"
tonic = "0.6"
warp = "0.3"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
rdbc = "0.1"
cdrs-tokio = "6.0.0"
mio = "0.8"
bytes = "1"
color-eyre="0.5"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
reqwest = "0.11"
bastion = "0.4"


# Loom dep is only for testing concurrent code
[target.'cfg(loom)'.dependencies]
loom = "0.5"